--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <p>para2</p>
 </div>
 
-
 <p class="para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque, dolore ut! Facilis enim provident perspiciatis laudantium, dicta eum odit quam harum aperiam. Esse maxime vitae eligendi ex in dignissimos sed animi, qui eius, earum cupiditate, placeat consequatur consequuntur facere culpa quis! Molestias beatae sequi in quaerat, corporis tenetur assumenda consequuntur nemo similique quo. Sequi dicta, commodi eos, ipsam ad unde facere iste odit perspiciatis distinctio accusamus eius ex cum dolor ipsa dolores non magnam aperiam nobis maxime necessitatibus sunt officia animi atque! Alias veniam culpa officiis repellat veritatis nobis voluptatibus architecto praesentium, consequatur tenetur quas, ad aut tempore eaque accusamus.</p>
+Basic Structure of an HTML Table
 </body>
 </html>
