transform and wireframe

--- a/mediaQuery/index.html
+++ b/mediaQuery/index.html
@@ -7,27 +7,49 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <!-- normal example start -->
-    <!-- <div class="container">
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid dolores iure fugiat libero doloremque sapiente rem nesciunt? Molestiae, reiciendis obcaecati laboriosam dignissimos, dolore harum repudiandae accusamus eligendi, quaerat fuga natus explicabo officia esse? Esse atque dicta minima at expedita eaque quas labore quis voluptates ipsam eveniet neque laboriosam, vero quibusdam.</p>
-   </div>  -->
-    <!-- normal example end -->
-
-    <!-- grid section start -->
-    <div class="grid-container">
-        <div class="grid-item">item</div>
-        <div class="grid-item">item</div>
-        <div class="grid-item">item</div>
-        <div class="grid-item">item</div>
-        <div class="grid-item">item</div>
-        <div class="grid-item">item</div>
-        <div class="grid-item">item</div>
-        <div class="grid-item">item</div>
-        <div class="grid-item">item</div>
-        <div class="grid-item">item</div>
-        <div class="grid-item">item</div>
-        <div class="grid-item">item</div>
+<div class="grid-container">
+  <div class="items">
+    <div class="card-container">
+      <img class="card-img" src="../images/trendingBlue.svg" alt="">
+      <div class="dis-container">10% off</div>
     </div>
-    <!-- grid section end  -->
+  </div>
+  <div class="items">
+    <div class="card-container">
+      <img class="card-img" src="../images/trendingBlue.svg" alt="">
+      <div class="dis-container">10% off</div>
+    </div>
+  </div>
+  <div class="items">
+    <div class="card-container">
+      <img class="card-img" src="../images/trendingBlue.svg" alt="">
+      <div class="dis-container">10% off</div>
+    </div>
+  </div>
+  <div class="items">
+    <div class="card-container">
+      <img class="card-img" src="../images/trendingBlue.svg" alt="">
+      <div class="dis-container">10% off</div>
+    </div>
+  </div>
+  <div class="items">
+    <div class="card-container">
+      <img class="card-img" src="../images/trendingBlue.svg" alt="">
+      <div class="dis-container">10% off</div>
+    </div>
+  </div>
+  <div class="items">
+    <div class="card-container">
+      <img class="card-img" src="../images/trendingBlue.svg" alt="">
+      <div class="dis-container">10% off</div>
+    </div>
+  </div>
+  <div class="items">
+    <div class="card-container">
+      <img class="card-img" src="../images/trendingBlue.svg" alt="">
+      <div class="dis-container">10% off</div>
+    </div>
+  </div>
+</div>
 </body>
 </html>
